@@ -1,3 +1,5 @@
+switching pop local store from mbox to maildir.
+
 for internal frames, focus now goes to the correct component instead of to
 the toolbar.
 
